# ansies

./: .clang-format  .clang-tidy  .gitignore  README.md  binary_config.json  clean.py  conanfile.py  meson.build  profiles.ini
ansies/: ansies.hpp  version.hpp.in
include/ansies/: ansies.hpp  version.hpp.in
src/: ansies.cpp  version.cpp
test_package/: conanfile.py  meson.build
test_package/src/: main.cpp
